--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "react-responsive": "^7.0.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "source-map-explorer": "^2.0.1",
     "styled-components": "^3.4.10"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
